--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@ html {
 
 body {
   font-family: "Nunito", Arial, Helvetica, sans-serif !important;
+  color: #43443f;
 }
 
 .container {
   margin: 2rem 2rem;
-  background-color: #dadadc;
+  background-color: #f3e6e8;
+  background-image: linear-gradient(315deg, #f3e6e8 0%, #d5d0e5 74%);
+  /* background-color: #dadadc; */
   height: 100vh;
   border-radius: 6px;
 }
@@ -45,12 +48,20 @@ body {
 .btn {
   font-family: inherit;
   border: 0;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 0rem;
   border-radius: 6px;
-  background-color: #3b3c36;
-  color: white;
   font-weight: 600;
   cursor: pointer;
+  color: #43443f;
+}
+
+.btn--grey {
+  background-color: #4e4f48;
+  opacity: 0.8;
+  color: white;
+}
+.btn--transparent {
+  background-color: transparent;
 }
 
 .btn i {
@@ -79,15 +90,18 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 70%;
+  width: 40%;
 
-  background-color: white;
-  padding: 6rem;
+  background-color: #dad4da;
+  padding: 2rem;
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   z-index: 10;
 }
 
+.modal h1 {
+  margin-top: 0.3rem;
+}
 .overlay {
   position: absolute;
   top: 0;
@@ -97,4 +111,80 @@ body {
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(3px);
   z-index: 5;
+}
+
+/* Circles */
+#circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.todocir {
+  background-color: #ffadad;
+}
+
+/* Forms */
+.form__group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form label {
+  font-weight: 600;
+  font-size: 1.35rem;
+  margin-bottom: 0.75rem;
+}
+
+.form input,
+.form select,
+.form textarea {
+  font-family: inherit;
+  background-color: #e6e6e7;
+  border-radius: 3px;
+  padding: 0.35rem;
+}
+
+.form__control {
+  border: 2px solid #e6e6e7;
+  outline: 0;
+  transition: border 0.15s, box-shadow 0.15s;
+  margin-bottom: 2rem;
+  min-width: 20rem;
+}
+
+.form__control:focus {
+  border: 1px solid #86b7fe;
+  box-shadow: 0 0 0 5px #b9d3fa;
+}
+
+.form__top-row {
+  display: flex;
+  justify-content: flex-start;
+  padding: 1rem 13rem;
+}
+.form__description {
+  padding: 1rem 8rem;
+  margin: 0 5rem;
+}
+
+.form__task-name {
+  margin-right: 7rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .modal {
+    width: 100%;
+  }
+  .form__top-row {
+    padding: 1rem 6rem;
+  }
+  .form__description {
+    padding: 1rem 3rem;
+  }
+}
+@media screen and (max-width: 1440px) {
+  .modal {
+    width: 60%;
+  }
 }
