--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font-family: "Nunito", Arial, Helvetica, sans-serif !important;
-  color: #43443f;
+  color: #53544d;
 }
 
 .container {
@@ -118,9 +118,10 @@ body {
   width: 10px;
   height: 10px;
   border-radius: 50%;
+  margin: 0;
 }
 
-.todocir {
+.todo-cir {
   background-color: #ffadad;
 }
 
@@ -192,10 +193,15 @@ body {
 /* Badges */
 .badge {
   border-radius: 20px;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: center;
   font-weight: 600;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 3rem;
+  width: 10%;
   white-space: nowrap;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .badge--to-do {
@@ -208,9 +214,54 @@ body {
 .badge--comp {
   background-color: #caffbf;
 }
+
+/* Cards */
+.card {
+  border-radius: 7px;
+  box-shadow: 0 0 30px 5px #aeadad;
+  background: rgba(243, 243, 243, 0.823);
+  overflow: hidden;
+  padding: 2rem 2rem;
+  align-self: center;
+}
+
+.card h3 {
+  font-size: 2rem;
+  margin-bottom: 0;
+  font-weight: 600;
+}
+
+.card p {
+  font-size: 1.2rem;
+}
+
 /* grid */
+
 .grid {
+  padding: 1rem 1.5rem;
+  font-family: inherit;
+  margin: 0rem 2rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-gap: 3rem;
   height: 100vh;
+  align-items: stretch;
+}
+
+.column {
+  justify-self: center;
+  margin: 0 auto;
+}
+
+.col__header h1 {
+  margin-bottom: 0.1rem;
+}
+
+hr {
+  margin-bottom: 2rem;
+  border-top: 1px solid rgba(182, 181, 181, 0.823);
+}
+.col__header {
+  width: 100%;
+  text-align: left;
 }
