--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   background-color: #f3e6e8;
   background-image: linear-gradient(315deg, #f3e6e8 0%, #d5d0e5 74%);
   /* background-color: #dadadc; */
-  height: 100vh;
+  height: 100%;
   border-radius: 6px;
 }
 
@@ -143,7 +143,11 @@ body {
   font-family: inherit;
   background-color: #e6e6e7;
   border-radius: 3px;
-  padding: 0.35rem;
+  padding: 0.35rem 0.8rem;
+}
+
+.form textarea {
+  padding: 2rem 2rem;
 }
 
 .form__control {
@@ -171,23 +175,6 @@ body {
 
 .form__task-name {
   margin-right: 7rem;
-}
-
-@media screen and (max-width: 1024px) {
-  .modal {
-    width: 100%;
-  }
-  .form__top-row {
-    padding: 1rem 6rem;
-  }
-  .form__description {
-    padding: 1rem 3rem;
-  }
-}
-@media screen and (max-width: 1440px) {
-  .modal {
-    width: 60%;
-  }
 }
 
 /* Badges */
@@ -223,6 +210,8 @@ body {
   overflow: hidden;
   padding: 2rem 2rem;
   align-self: center;
+  width: 80%;
+  margin-bottom: 3rem;
 }
 
 .card h3 {
@@ -243,7 +232,7 @@ body {
   margin: 0rem 2rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 3rem;
+  grid-gap: 30rem;
   height: 100vh;
   align-items: stretch;
 }
@@ -264,4 +253,32 @@ hr {
 .col__header {
   width: 100%;
   text-align: left;
+}
+
+@media screen and (max-width: 1024px) {
+  .modal {
+    width: 100%;
+  }
+  .form__top-row {
+    padding: 1rem 6rem;
+  }
+  .form__description {
+    padding: 1rem 3rem;
+  }
+  .grid {
+    grid-gap: 8rem;
+  }
+
+  .card {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 1440px) {
+  .modal {
+    width: 60%;
+  }
+  .grid {
+    margin-left: 0;
+    grid-gap: 15rem;
+  }
 }
