--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 body {
   font-family: "Nunito", Arial, Helvetica, sans-serif !important;
   color: #53544d;
+  overflow: hidden;
 }
 
 .container {
@@ -12,8 +13,14 @@ body {
   background-color: #f3e6e8;
   background-image: linear-gradient(315deg, #f3e6e8 0%, #d5d0e5 74%);
   /* background-color: #dadadc; */
-  height: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+
   border-radius: 6px;
+}
+
+.container::-webkit-scrollbar {
+  display: none;
 }
 
 /* Header */
@@ -129,6 +136,7 @@ body {
 .form__group {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .form label {
@@ -144,6 +152,19 @@ body {
   background-color: #e6e6e7;
   border-radius: 3px;
   padding: 0.35rem 0.8rem;
+}
+
+.form__task-name,
+.form__status {
+  margin-left: 13rem;
+}
+
+.form select {
+  width: 40%;
+}
+
+.form input {
+  width: 41.5%;
 }
 
 .form textarea {
