--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 .btn {
   font-family: inherit;
   border: 0;
-  padding: 1.5rem 0rem;
+  padding: 1.5rem 2rem;
   border-radius: 6px;
   font-weight: 600;
   cursor: pointer;
@@ -71,10 +71,24 @@ body {
   background-color: transparent;
 }
 
+.btn--danger {
+  background-color: #dad4da;
+  border: 1px solid #e72c2c;
+  color: #e72c2c;
+}
+
+.btn--danger:hover {
+  cursor: pointer;
+  background-color: #fcb1b1;
+}
+
 .btn i {
   margin-right: 0.4rem;
 }
 
+.form__create {
+  align-self: center;
+}
 /* Modal */
 
 .close-modal {
@@ -139,6 +153,20 @@ body {
   justify-content: center;
 }
 
+.form__btn-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.form__btn-group button {
+  margin-right: 3rem;
+}
+
+.form__create:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
 .form label {
   font-weight: 600;
   font-size: 1.35rem;
