--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ body {
   font-size: 2rem;
   margin-bottom: 0;
   font-weight: 600;
+  word-break: break-all;
 }
 
 .card p {
@@ -296,16 +297,19 @@ body {
 
 .column {
   justify-self: center;
+  border-radius: 5px;
+  padding: 1rem 1rem;
   margin: 0 auto;
   width: 100%;
   transition: all 0.4s;
 }
 
 .dragging {
-  background: #dad4da;
+  background: #d8cfd8;
 }
 
 .col__header h1 {
+  margin-top: 2rem;
   margin-bottom: 0.1rem;
 }
 
